# braindrain

./: .codexrules  .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  .windsurfrules  AGENTS.md  AGENTS.md.template  CHANGELOG.md  README.md  ROADMAP.md  TODOS.md  TRADEMARKS.md  bench_events.db-shm  bench_events.db-wal  install.sh  network_connectivity_check.py  pyproject.toml  repro_leak.py  reproduce_compaction.py  requirements.txt  test_brain.db-shm  test_brain.db-wal  test_decay_zero.db-shm  test_decay_zero.db-wal  test_events.db-shm  test_events.db-wal  verify_fallback.py
.Jules/: palette.md
.cursor/plans/: master_plan_overseer_7d6f1394.plan.md
.devdocs/: README.md  ROADMAP.md  TODOS.md
.github/workflows/: ci.yml  token-benchmark.yml
.jules/: sentinel.md
.logs/: braindrain_debug_report_2026-03-23.md  braindrain_debug_report_2026-03-26.md  braindrain_debug_report_2026-04-03.md
.scriptlib/: benchmark_token_savings_brain_mcp_hub_v1.py  libindex.md
bd-plugins/ai-shell/: README.md  SKILL.md  bridge.py  plugin.py
braindrain/: __init__.py  comms.py  config.py  config_schema.py  context_mode_client.py  dream.py  dream_trigger.py  embeddings_client.py  embeddings_router.py  env_probe.py  exec_path.py  instrumentation.py  livingdash.py  livingdash_collectors.py  livingdash_sidecar.py  macos_host_idle.py  mcp_catalog.py  mcp_stdio_client.py  memory_learning.py  observer.py  otel.py  output_router.py  plan_audit_history.py  plan_audit_history_html.py  plugin_host.py  repo_stats.py  rerank.py  scriptlib.py  server.py  session.py  session_compaction.py  task_manager.py  telemetry.py  token_benchmark.py  token_checkpoints.py  tool_registry.py  types.py  updater.py  wiki_brain.py  workflow_engine.py  (+1 more)
braindrain/ldash/: SIDECAR.md
braindrain/mcp_apps/: PLAN_BOARD_UI.md  SIGINT_MAP_UI.md  __init__.py  constants.py  data.py  html.py  plan_actions.py  plan_enrich.py  plan_gates.py  plan_paths.py  (+3 more)
config/: ai_shell_policy.yaml  braindrain  com.braindrain.dream-watch.plist  com.braindrain.mcp.plist  hub_config.yaml  opencode_mcp.json  opencode_mcp.jsonc  zed_mcp.json
docs/: BRAIN_CONTEXT_HUB_FULL_SPEC_v2.md  PROJECT_EVALUATION_2026-06.md  learning-layer-gap-audit.md  skill-braindrain-hub-pr.md
scripts/: backfill_plan_audit_history.py  daily_plan_audit.py  install_dream_watch_launchd.sh  jules-bolt-pr69-closeout.md  macos_dream_watch.py  macos_dream_watch.sh  plan_branch_utils.py  plan_build_guard.py  plan_meta_closeout.py  plan_provenance_stamp.py  regenerate_mcp_tool_schemas_snapshot.py  render_plan_audit_history.py  run_dream_cron.sh  update_braindrain.sh
tests/: conftest.py  fake_mcp_tool_server.py  test_ai_shell_macos_bridge.py  test_ai_shell_plugin.py  test_ai_shell_policy.py  test_config_schema.py  test_core.py  test_dream_trigger.py  test_dream_weights.py  test_env_probe_codex.py  test_exec_path.py  test_livingdash.py  test_livingdash_collectors.py  test_livingdash_sidecar_api.py  test_macos_host_idle.py  test_mcp_apps.py  test_mcp_catalog.py  test_mcp_tool_schemas.py  test_plan_audit_history.py  test_plan_auditor_master.py  test_plan_build_guard.py  test_plan_meta_closeout.py  test_plan_provenance_stamp.py  test_plugin_host_contract.py  test_route_output_records_savings.py  test_ruler_toml_v03.py  test_scriptlib.py  test_telemetry_observer_bridge.py  test_telemetry_sanitization.py  test_token_benchmark.py  test_token_checkpoints.py  test_updater.py  test_wiki_brain_contradiction.py  test_wiki_brain_decay.py  test_workflow_engine.py  test_workspace_primer_hooks.py
(+140 files in other folders)
